objects/RAVMatrix__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Matriz de regimen de autorización vigente</description>
    <fields>
        <fullName>EquipoRevisor__c</fullName>
        <label>EquipoRevisor</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MontoExcepcion__c</fullName>
        <description>Monto maximo permitido para el perfil por excepcion</description>
        <label>MontoExcepcion</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MontoMax__c</fullName>
        <label>MontoMax</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PerfilAprobador__c</fullName>
        <label>PerfilAprobador</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segmento__c</fullName>
        <description>Segmento de la cuenta a la que se aplica el ajuste</description>
        <label>Segmento</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipodeajuste__c</fullName>
        <label>Tipodeajuste</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>RAVMatrix</label>
    <listViews>
        <fullName>RAVMatrix</fullName>
        <columns>Segmento__c</columns>
        <columns>Tipodeajuste__c</columns>
        <columns>MontoMax__c</columns>
        <columns>MontoExcepcion__c</columns>
        <columns>EquipoRevisor__c</columns>
        <columns>PerfilAprobador__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>RAVMatrix</label>
        <language>en_US</language>
    </listViews>
</CustomObject>